--- a/components/Marketplace/TrainerFilters.module.css
+++ b/components/Marketplace/TrainerFilters.module.css
@@ -93,4 +93,10 @@
         flex-direction: column;
         align-items: flex-start;
     }
+
+    .searchInput,
+    .locationSelect {
+        width: 100%;
+        min-width: 0;
+    }
 }
